added working drop down

--- a/production/css/sass/nav.sass
+++ b/production/css/sass/nav.sass
@@ -126,6 +126,18 @@
 		left: 150px		
 		a 
 			padding: 13px 10px 4px 10px
+.wrap_1 
+	.drop_down
+		header 
+			width: 110px	
+.wrap_2
+	.drop_down
+		header 
+			width: 129px
+.wrap_3
+	.drop_down
+		header 
+			width: 200px								
 .drop_down
 	margin-top: 15px
 	max-height: 36px
