--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -1045,6 +1045,101 @@ footer
 			background: #fff
 			border-radius: 11px
 			padding: 0 30px
+			@include clear
+			.column_first
+				width: 310px
+				float: left
+				padding-top: 25px
+				.lenta
+					margin-left: -8px
+					width: 318px
+					height: 233px
+					overflow: hidden
+					@include clear
+				a[rel="gallery1"]
+					border: 1px solid #e1e1e1
+					width: 95px
+					height: 95px
+					margin: 6px
+					display: block
+					position: relative
+					overflow: hidden
+					float: left
+					&.first
+						width: 100%
+						height: 215px
+						float: none
+						margin: 0
+						margin-bottom: 15px
+					&.last
+						margin-right: 0	
+					img 
+						position: absolute
+						top: 50%
+						left: 50%
+						transform: translate(-50%, -50%)
+						min-width: 100%
+						min-height: 100%
+			.second_column
+				float: left
+				width: 500px
+				padding-left: 38px
+				padding-top: 25px
+				h4 
+					color: #2d2c2c
+					font-weight: 700
+					font-size: 22px
+					text-transform: uppercase
+					padding-bottom: 10px
+				ul 
+					list-style-type: none
+					li 
+						color: #2d2d2d
+						font-size: 15px
+						line-height: 30px
+						&.last
+							font-size: 20px
+							line-height: 35px
+						span
+							font-weight: 700	
+				p 
+					font-weight: 300
+					color: #2d2c2c
+					font-size: 16px
+					line-height: 28px
+					padding-top: 0px		
+				form
+					padding-top: 10px
+					h5
+						font-weight: 300
+						font-size: 25px
+						color: #2d2c2c
+					.column_first
+						width: 175px
+						float: left
+						padding-top: 0
+					input 
+						width: 175px
+						height: 31px	
+					textarea
+						border-radius: 9px
+						float: left
+						padding: 10px 13px
+						height: 119px
+						margin-top: 12px
+						margin-left: 25px
+						max-height: 119px
+						min-height: 119px
+						max-width: 225px
+						min-width: 225px
+						&:focus
+							outline: 0
+					button
+						text-transform: uppercase
+						width: 155px
+						margin-left: 125px
+						&:focus
+							outline: 0		
 		.closer
 			background: url('../img/sprite/sprite.png') no-repeat -355px -54px
 			width: 30px
@@ -1141,3 +1236,9 @@ footer
 					color: #278eb0
 				.icon_lan
 					background-position: -115px -243px
+
+.info 
+	.wrap 
+		width: 900px	
+		.window
+			border-radius: 0				
