--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -1049,13 +1049,46 @@ footer
 			.column_first
 				width: 310px
 				float: left
-				padding-top: 25px
+				padding-top: 20px
 				.lenta
 					margin-left: -8px
 					width: 318px
-					height: 233px
+					height: 106px
 					overflow: hidden
 					@include clear
+				.manager
+					background: #F1F1F1
+					padding-left: 15px
+					margin-top: 25px
+					@include clear
+					h3 
+						text-align: left
+						padding-left: 15px
+						margin-bottom: 15px
+						padding-top: 15px
+						font-size: 15px
+					.photo_wrap
+						width: 70px
+						height: 70px
+						overflow: hidden
+						float: left
+						position: relative
+						img 
+							position: absolute
+							top: 50%
+							left: 50%
+							transform: translate(-50%, -50%)
+							min-width: 100%
+							min-height: 100% 
+							max-width: 150%
+							max-height: 150% 
+					.info
+						float: left	
+						margin-left: 25px	
+						h4
+							margin-top: 10px	
+						h5 
+							margin-top: 10px
 				a[rel="gallery1"]
 					border: 1px solid #e1e1e1
 					width: 95px
@@ -1084,7 +1117,7 @@ footer
 				float: left
 				width: 500px
 				padding-left: 38px
-				padding-top: 25px
+				padding-top: 20px
 				h4 
 					color: #2d2c2c
 					font-weight: 700
@@ -1146,7 +1179,7 @@ footer
 			height: 30px	
 			position: absolute
 			right: -40px
-			top: -40px
+			top: -30px
 			cursor: pointer
 		h3 
 			font-weight: 700
