completed the modal window

--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -777,6 +777,7 @@ h2
 				background: rgba(0, 0, 0, 0)	
 				margin: 4px 0
 				padding: 10px 15px
+				width: 200px 
 				&:focus
 					outline: 0
 			button
