--- a/production/css/sass/font.sass
+++ b/production/css/sass/font.sass
@@ -1,17 +1,17 @@
 @font-face
 	font-family: 'Qanelas'
-	src: url('../fonts/Qanelas-Bold.otf')
+	src: url('../fonts/Qanelas-Bold.eot'), url('../fonts/Qanelas-Bold.otf')
 	font-weight: 700
 	font-style: normal
 
 @font-face
 	font-family: 'Qanelas'
-	src: url('../fonts/Qanelas-Light.otf')
+	src: url('../fonts/Qanelas-Light.eot'), url('../fonts/Qanelas-Light.otf')
 	font-weight: 300
 	font-style: normal	
 
 @font-face
 	font-family: 'Qanelas'
-	src: url('../fonts/Qanelas-Regular.otf')
+	src: url('../fonts/Qanelas-Regular.eot'), url('../fonts/Qanelas-Regular.otf')
 	font-weight: 400
 	font-style: normal	
