--- a/production/css/sass/nav.sass
+++ b/production/css/sass/nav.sass
@@ -65,7 +65,7 @@
 		right: 22px
 		transition: top .3s ease, right .3s ease
 		h3
-			font-size: 20pt
+			font-size: 15pt
 			color: #fff
 			font-weight: 300
 			transition: font-size .3s ease
@@ -76,6 +76,7 @@
 			color: #fff
 			font-weight: 300
 			line-height: 22pt	
+			cursor: pointer
 			transition: font-size .3s ease, line-height .3s ease
 			span
 				border-bottom: 1px dotted #fff	
@@ -89,7 +90,7 @@
 			padding: 20px 10px 9px 10px
 			color: #fff	
 			font-weight: 300
-			font-size: 13.7pt
+			font-size: 13pt
 			text-transform: uppercase
 			border-bottom: 4px solid rgba(0,0,0,0)
 			transition: color .2s linear, padding .3s ease
@@ -115,7 +116,7 @@
 		left: 40px	
 	.numbers
 		top: 4px
-		right: 75px	
+		right: 20px	
 		h3
 			font-size: 15pt
 			font-weight: 300
@@ -137,7 +138,7 @@
 .wrap_3
 	.drop_down
 		header 
-			width: 200px								
+			width: 221px								
 .drop_down
 	margin-top: 15px
 	max-height: 36px
@@ -171,7 +172,7 @@
 			margin-top: 4px
 	.list_block
 		border-radius: 0 0 17px 17px
-		width: 199px
+		width: 221px
 		overflow: hidden
 		position: relative
 		z-index: 1000
