--- a/production/css/sass/mail.sass
+++ b/production/css/sass/mail.sass
@@ -4,7 +4,8 @@
   left: 0
   width: 100%
   height: 100%
-  background: rgba(0, 0, 0, .8)
+  background: rgba(0, 126, 178, 0.7)
+  z-index: 500
   .message
     position: absolute
     top: 50%
@@ -20,6 +21,7 @@
       float: right
       padding-left: 25px
       padding-top: 30px
+      width: 350px	
       h3
         font-size: 25pt
         font-weight: 300
