--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -60,12 +60,25 @@ h2
 	background-size: cover
 	height: 900px
 	position: relative
+	overflow: hidden
+	.container
+		position: absolute	
+		top: 50%
+		left: 50%
+		transform: translate(-50%, -50%)
+	video
+		position: absolute	
+		top: 50%
+		left: 50%
+		width: 100%	
+		height: 120%	
+		transform: translate(-50%, -50%)
 	img[alt="UARC_logo"]
 		position: absolute
 		top: 175px
 		right: 15px
 	.wrap_button
-		padding-top: 370px	
+		padding-top: 170px	
 		text-align: center
 	h4 
 		text-shadow: 1px 2px 2px rgba(0, 0, 0, .5)
@@ -262,12 +275,15 @@ h2
 				text-align: center
 				font-size: 15px	
 				padding-bottom: 20px
+				height: 56px
 			.img_wrap
 				border: 2px solid #dadada
 				height: 135px
 				position: relative
+				background: #ececec
 				img 
-					max-width: 150px	
+					max-width: 150px
+					max-height: 100%	
 					position: absolute
 					top: 50%
 					left: 50%
@@ -423,14 +439,23 @@ h2
 		background: #ffffff
 		overflow: hidden
 		header
-			&.main:before
-				content: ' '
-				width: 26px
-				height: 26px
-				background: url('../img/sprite/sprite.png') no-repeat -328px -5px
+			.reset_filter
+				float: right
+				margin-top: 2px	
+				margin-right: 30px	
+				color: #1b69b3
+				border-bottom: 1px dotted
+				cursor: pointer	
+			.search_left
 				float: left
-				margin-right: 15px
-				margin-top: -2px
+				&:before
+					content: ' '
+					width: 26px
+					height: 26px
+					background: url('../img/sprite/sprite.png') no-repeat -328px -5px
+					float: left
+					margin-right: 15px
+					margin-top: -2px
 			&.main
 				background: #e4e4e4	
 				height: 45px
@@ -459,6 +484,7 @@ h2
 					font-weight: 400
 					color: #3c3c3c
 					padding-bottom: 20px	
+					font-weight: 700
 				.wrap_img
 					border-radius: 10px
 					height: 127px
@@ -568,10 +594,7 @@ h2
 						background: #0073a3
 		.icon_elem
 			@include clear
-		.icon_elem_margin
-			padding-top: 61px
-		.icon_elem_margin_2		
-			padding-top: 35px
+			height: 160px	
 		.icon
 			float: left
 			background: url('../img/sprite/sprite.png') no-repeat
@@ -646,6 +669,8 @@ h2
 			font-size: 30px
 			color: #fff
 			font-weight: 700
+			&.mini
+				font-size: 24px
 		p
 			color: #fff
 			font-size: 15px
@@ -761,16 +786,27 @@ h2
 				font-weight: 300
 				vertical-align: top
 		form 
-			width: 213px
-			float: left
+			width: 221px
+			float: right
+			margin-right: 80px	
 			h3 
 				font-weight: 700
 				font-size: 23px 
 				color: #3a3a3a
-				padding-top: 45px	
+				padding-top: 10px	
 				text-transform: uppercase
 				padding-bottom: 20px	
 			input
+				color: #4d4c4c
+				border: 1px solid #0073a3
+				border-radius: 9px
+				background: rgba(0, 0, 0, 0)	
+				margin: 4px 0
+				padding: 10px 15px
+				width: 200px 
+				&:focus
+					outline: 0	
+			textarea
 				color: #4d4c4c
 				border: 1px solid #0073a3
 				border-radius: 9px
@@ -804,9 +840,40 @@ h2
 			font-size: 34px
 			line-height: 34px 
 			padding-top: 96px
-			margin-left: 237px
+			margin-left: -229px
 			span 
-				color: #d62929							
+				color: #d62929
+		.contact
+			float: right
+			.image_block
+				text-align: center
+				margin-top: 60px	
+				.image_wrap
+					width: 125px	
+					height: 125px	
+					position: relative	
+					top: 0
+					border-radius: 50%
+					overflow: hidden
+					img
+						position: absolute	
+						top: 50%
+						left: 50%
+						transform: translate(-50%, -50%)
+						min-width: 100%
+						min-height: 100%	
+						max-width: 	110%
+						max-height: 110%
+			.number 
+				color: #3a3a3a
+				font-weight: 700
+				font-size: 25px
+				padding-top: 15px	
+				padding-bottom: 5px	
+			.mail 
+				span
+					border-bottom: 1px solid
+					color: #3a3a3a												
 #sotr
 	background: url('../img/background/partner.jpg') no-repeat 
 	background-size: cover
@@ -901,6 +968,10 @@ h2
 			text-transform: uppercase
 			float: right
 			margin-right: 50px
+			cursor: pointer
+			transition: background .3s ease
+			&:hover
+				background: #F1485D
 			span.first
 				font-size: 25px
 			span.second
@@ -951,7 +1022,7 @@ h2
 				color: #3c3c3c
 				font-size: 45px
 				font-weight: 700
-				margin-top: 75px
+				margin-top: 45px
 				line-height: 50px
 			h4 
 				margin-top: 40px
@@ -960,11 +1031,11 @@ h2
 				font-size: 40px
 				border-bottom: 2px solid #dcdcdc
 				width: 465px
-				padding-bottom: 35px
+				padding-bottom: 15px
 				span 
 					font-weight: 700	
 			h5 
-				margin-top: 30px
+				margin-top: 20px
 				font-size: 26px
 				color: #3c3c3c
 				font-weight: 700
@@ -1023,18 +1094,28 @@ footer
 	left: 0
 	background: rgba(0, 126, 178, .7)
 	z-index: 102
+	&.feedback
+		.wrap
+			.window
+				form
+					button
+						width: 170px
+						height: 45px
+						margin-left: 50%
+						transform: translateX(-50%)
+						text-transform: uppercase
 	&.ng-enter
 		opacity: 0
-		transition: opacity 1s ease	
+		transition: opacity .5s ease	
 	&.ng-enter-active
 		opacity: 1
-		transition: opacity 1s ease	
+		transition: opacity .5s ease	
 	&.ng-leave
 		opacity: 1
-		transition: opacity 1s ease	
+		transition: opacity .5s ease	
 	&.ng-leave-active
 		opacity: 0
-		transition: opacity 1s ease	
+		transition: opacity .5s ease	
 	.wrap
 		position: absolute
 		top: 50%
@@ -1081,8 +1162,8 @@ footer
 							transform: translate(-50%, -50%)
 							min-width: 100%
 							min-height: 100% 
-							max-width: 150%
-							max-height: 150% 
+							max-width: 120%
+							max-height: 120% 
 					.info
 						float: left	
 						margin-left: 25px	
@@ -1173,7 +1254,40 @@ footer
 						width: 155px
 						margin-left: 125px
 						&:focus
-							outline: 0		
+							outline: 0	
+			a
+				color: #0073a3
+				display: block
+				margin-top: 15px						
+			.share_button
+				float: left
+				width: 100%
+				margin-top: 25px
+				.facebook
+					background: url('../img/sprite/sprite.png') no-repeat -10px -287px	
+					height: 18px
+					width: 85px	
+					cursor: pointer
+					float: left
+					margin-left: 5px
+				.vk
+					background: url('../img/sprite/sprite.png') no-repeat -10px -313px	
+					height: 18px
+					width: 85px	
+					float: left
+					margin-left: 5px
+				.linkedin
+					background: url('../img/sprite/sprite.png') no-repeat -10px -339px	
+					height: 18px
+					width: 85px
+					float: left	
+					margin-left: 5px	
+				.twitter
+					background: url('../img/sprite/sprite.png') no-repeat -10px -365px	
+					height: 18px
+					width: 85px	
+					float: left	
+					margin-left: 5px
 		.closer
 			background: url('../img/sprite/sprite.png') no-repeat -355px -54px
 			width: 30px
@@ -1190,7 +1304,19 @@ footer
 			padding-top: 28px
 			text-align: center
 		form 
-			input
+			input:not([type="submit"])
+				border: 1px solid #cccccc
+				border-radius: 9px
+				width: 267px
+				padding: 10px 20px
+				display: block
+				margin: 13px auto
+				font-size: 15px
+				font-weight: 300
+				color: #959595
+				&:focus
+					outline: 0	
+			textarea
 				border: 1px solid #cccccc
 				border-radius: 9px
 				width: 267px
@@ -1219,6 +1345,25 @@ footer
 					color: #fff
 				&:active
 					outline: 0	
+			input[type="submit"]	
+				border: 1px solid #a8cfe0
+				display: block
+				margin: auto
+				font-weight: 700
+				color: #0073a3
+				font-size: 18px 
+				padding: 0 25px
+				height: 37px
+				background: rgba(0, 0, 0, 0)
+				border-radius: 18px
+				cursor: pointer
+				margin-top: 20px
+				transition: all .3s ease
+				&:hover
+					background: rgba(0, 115, 163, 1)
+					color: #fff
+				&:active
+					outline: 0		
 			.reg
 				float: right
 				padding-top: 27px	
@@ -1275,4 +1420,123 @@ footer
 	.wrap 
 		width: 900px	
 		.window
-			border-radius: 0				
+			border-radius: 0		
+			
+.slide
+	position: fixed	
+	top: 50%
+	transform: translateY(-50%)
+	width: 650px	
+	height: 540px	
+	background: #fff
+	border-radius: 0 15px 15px 0
+	z-index: 102
+	transition: left .3s ease-in
+	.wrap
+		position: relative	
+		width: 100%	
+		height: 100%	
+		top: 0
+		left: 0	
+		form 
+			position: absolute
+			top: 50px
+			left: 326px
+			padding: 15px	30px 30px 30px
+			border: 2px solid #b5b5b5
+			border-radius: 15px
+			box-shadow: 1px 1px 5px #b5b5b5
+			width: 280px	
+			text-align: center
+			h3 
+				font-weight: 700
+				color: #3c3c3c
+				font-size: 20px
+				margin-bottom: 35px
+				padding-top: 13px
+				text-align: center	
+			h4 
+				color: #373737
+				font-size: 15px
+				text-align: center	
+				line-height: 25px
+				margin-top: 20px		
+			input[type="text"]
+				border: 1px solid #cccccc
+				border-radius: 15px
+				width: 220px
+				padding: 10px 20px
+				display: block
+				margin: 13px auto
+				font-size: 15px
+				font-weight: 300
+				color: #868686
+				&:focus
+					outline: 0
+			input[type="number"]
+				border: 1px solid #cccccc
+				border-radius: 15px
+				width: 220px
+				padding: 10px 20px
+				display: block
+				margin: 13px auto
+				font-size: 15px
+				font-weight: 300
+				color: #868686
+				&:focus
+					outline: 0
+			label
+				color: #1b69b3
+				border-bottom: 1px dotted	
+				margin-left: -25px	
+				cursor: pointer	
+				&:after
+					content: ''
+					width: 25px	
+					height: 25px	
+					background: url('../img/sprite/sprite.png')	no-repeat -170px -251px	
+					margin-left: 25px
+					position: absolute	
+			button 
+				border: 1px solid #a8cfe0
+				font-weight: 700
+				color: #0073a3
+				font-size: 18px 
+				width: 150px
+				height: 38px
+				background: rgba(0, 0, 0, 0)
+				border-radius: 18px
+				cursor: pointer
+				margin-top: 20px
+				transition: all .3s ease
+				&:hover
+					background: rgba(0, 115, 163, 1)
+					color: #fff
+				&:active
+					outline: 0		
+		.woman
+			position: absolute	
+			top: 55px
+			left: 100px
+			background: url('../img/sprite/sprite.png') no-repeat -396px 0
+			height: 415px	
+			width: 300px	
+			
+		.button
+			background: url('../img/sprite/sprite.png') no-repeat 0 0
+			cursor: pointer	
+			width: 35px	
+			height: 260px
+			position: absolute	
+			top: 50%
+			right: -35px
+			transform: translateY(-50%)
+	&.open
+		left: -5%
+	&.close
+		left: -34%
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi)
+	.slide.close
+		left: -46%		       
+		
+								
