final status project

--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -1223,7 +1223,8 @@ footer
 						left: 50%
 						transform: translate(-50%, -50%)
 						min-width: 100%
-						min-height: 100%
+						max-width: 100%
+						
 			.second_column
 				float: left
 				width: 500px
