--- a/production/css/sass/main.sass
+++ b/production/css/sass/main.sass
@@ -1580,3 +1580,10 @@ footer
 		transform: translate(-20%, -50%)
 	&.close
 		transform: translate(-100%, -50%)
+
+.list_info_column
+	@include clear
+	ul
+		float: left
+		width: 50%
+		box-sizing: border-box
